[gd_scene load_steps=69 format=2]

[ext_resource path="res://scenes/common/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/GameDevAssets/boy.png" type="Texture" id=2]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" type="Script" id=3]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/BooleanCondition.gd" type="Script" id=4]
[ext_resource path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" type="Script" id=5]
[ext_resource path="res://addons/imjp94.yafsm/src/states/State.gd" type="Script" id=6]
[ext_resource path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" type="Script" id=7]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/FloatCondition.gd" type="Script" id=8]
[ext_resource path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" type="Script" id=9]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/IntegerCondition.gd" type="Script" id=10]
[ext_resource path="res://assets/GameDevAssets/dot_long.png" type="Texture" id=11]
[ext_resource path="res://scenes/common/JumpDotLong.gd" type="Script" id=12]
[ext_resource path="res://addons/Trail/trail_2d.gd" type="Script" id=13]

[sub_resource type="Resource" id=1]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 348, 120 )
}
name = "Entry"

[sub_resource type="Resource" id=2]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 428, 120 )
}
name = "die"

[sub_resource type="Resource" id=3]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 468, -280 )
}
name = "falling"

[sub_resource type="Resource" id=4]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 348, -140 )
}
name = "idle"

[sub_resource type="Resource" id=5]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 868, -200 )
}
name = "jump"

[sub_resource type="Resource" id=6]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 621.5, -40 )
}
name = "jumping"

[sub_resource type="Resource" id=7]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 859.5, -140 )
}
name = "lost_floor"

[sub_resource type="Resource" id=8]
script = ExtResource( 6 )
__meta__ = {
"graph_offset": Vector2( 937.5, 180 )
}
name = "wall_slide"

[sub_resource type="Resource" id=9]
script = ExtResource( 5 )
from = "Entry"
to = "idle"
conditions = {
}

[sub_resource type="Resource" id=10]
script = ExtResource( 3 )
name = "die"

[sub_resource type="Resource" id=11]
script = ExtResource( 5 )
from = "falling"
to = "die"
conditions = {
"die": SubResource( 10 )
}

[sub_resource type="Resource" id=12]
script = ExtResource( 4 )
name = "on_floor"
comparation = 0
value = true

[sub_resource type="Resource" id=13]
script = ExtResource( 5 )
from = "falling"
to = "idle"
conditions = {
"on_floor": SubResource( 12 )
}

[sub_resource type="Resource" id=55]
script = ExtResource( 8 )
name = "velocity_y"
comparation = 3
value = 0.0

[sub_resource type="Resource" id=56]
script = ExtResource( 5 )
from = "falling"
to = "jumping"
conditions = {
"velocity_y": SubResource( 55 )
}

[sub_resource type="Resource" id=57]
script = ExtResource( 10 )
name = "wall_direction"
comparation = 1
value = 0

[sub_resource type="Resource" id=58]
script = ExtResource( 5 )
from = "falling"
to = "wall_slide"
conditions = {
"wall_direction": SubResource( 57 )
}

[sub_resource type="Resource" id=59]
script = ExtResource( 3 )
name = "die"

[sub_resource type="Resource" id=60]
script = ExtResource( 5 )
from = "idle"
to = "die"
conditions = {
"die": SubResource( 59 )
}

[sub_resource type="Resource" id=61]
script = ExtResource( 3 )
name = "jump"

[sub_resource type="Resource" id=62]
script = ExtResource( 5 )
from = "idle"
to = "jump"
conditions = {
"jump": SubResource( 61 )
}

[sub_resource type="Resource" id=63]
script = ExtResource( 4 )
name = "on_floor"
comparation = 0
value = false

[sub_resource type="Resource" id=64]
script = ExtResource( 5 )
from = "idle"
to = "lost_floor"
conditions = {
"on_floor": SubResource( 63 )
}

[sub_resource type="Resource" id=65]
script = ExtResource( 5 )
from = "jump"
to = "jumping"
conditions = {
}

[sub_resource type="Resource" id=66]
script = ExtResource( 3 )
name = "die"

[sub_resource type="Resource" id=67]
script = ExtResource( 5 )
from = "jumping"
to = "die"
conditions = {
"die": SubResource( 66 )
}

[sub_resource type="Resource" id=68]
script = ExtResource( 8 )
name = "velocity_y"
comparation = 2
value = 0.0

[sub_resource type="Resource" id=69]
script = ExtResource( 5 )
from = "jumping"
to = "falling"
conditions = {
"velocity_y": SubResource( 68 )
}

[sub_resource type="Resource" id=70]
script = ExtResource( 4 )
name = "on_floor"
comparation = 0
value = true

[sub_resource type="Resource" id=71]
script = ExtResource( 5 )
from = "jumping"
to = "idle"
conditions = {
"on_floor": SubResource( 70 )
}

[sub_resource type="Resource" id=72]
script = ExtResource( 10 )
name = "wall_direction"
comparation = 1
value = 0

[sub_resource type="Resource" id=73]
script = ExtResource( 5 )
from = "jumping"
to = "wall_slide"
conditions = {
"wall_direction": SubResource( 72 )
}

[sub_resource type="Resource" id=74]
script = ExtResource( 5 )
from = "lost_floor"
to = "jumping"
conditions = {
}

[sub_resource type="Resource" id=75]
script = ExtResource( 3 )
name = "die"

[sub_resource type="Resource" id=76]
script = ExtResource( 5 )
from = "wall_slide"
to = "die"
conditions = {
"die": SubResource( 75 )
}

[sub_resource type="Resource" id=77]
script = ExtResource( 4 )
name = "on_floor"
comparation = 0
value = true

[sub_resource type="Resource" id=78]
script = ExtResource( 5 )
from = "wall_slide"
to = "idle"
conditions = {
"on_floor": SubResource( 77 )
}

[sub_resource type="Resource" id=79]
script = ExtResource( 3 )
name = "jump"

[sub_resource type="Resource" id=80]
script = ExtResource( 5 )
from = "wall_slide"
to = "jump"
conditions = {
"jump": SubResource( 79 )
}

[sub_resource type="Resource" id=81]
script = ExtResource( 10 )
name = "wall_direction"
comparation = 0
value = 0

[sub_resource type="Resource" id=82]
script = ExtResource( 5 )
from = "wall_slide"
to = "jumping"
conditions = {
"wall_direction": SubResource( 81 )
}

[sub_resource type="Resource" id=83]
script = ExtResource( 9 )
name = ""
states = {
"Entry": SubResource( 1 ),
"die": SubResource( 2 ),
"falling": SubResource( 3 ),
"idle": SubResource( 4 ),
"jump": SubResource( 5 ),
"jumping": SubResource( 6 ),
"lost_floor": SubResource( 7 ),
"wall_slide": SubResource( 8 )
}
transitions = {
"Entry": {
"idle": SubResource( 9 )
},
"falling": {
"die": SubResource( 11 ),
"idle": SubResource( 13 ),
"jumping": SubResource( 56 ),
"wall_slide": SubResource( 58 )
},
"idle": {
"die": SubResource( 60 ),
"jump": SubResource( 62 ),
"lost_floor": SubResource( 64 )
},
"jump": {
"jumping": SubResource( 65 )
},
"jumping": {
"die": SubResource( 67 ),
"falling": SubResource( 69 ),
"idle": SubResource( 71 ),
"wall_slide": SubResource( 73 )
},
"lost_floor": {
"jumping": SubResource( 74 )
},
"wall_slide": {
"die": SubResource( 76 ),
"idle": SubResource( 78 ),
"jump": SubResource( 80 ),
"jumping": SubResource( 82 )
}
}

[sub_resource type="RectangleShape2D" id=84]
extents = Vector2( 9.32073, 15.0776 )

[sub_resource type="Animation" id=85]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -1, -0.25, 0, 0.31, -95, 447, -0.56, 57.5, 0.25, 0 ),
"times": PoolRealArray( 0.1, 1.5 )
}

[sub_resource type="Animation" id=86]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=87]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=47]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=48]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=49]
resource_name = "Beat"
length = 0.3
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=50]
resource_name = "die"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("..:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 4.00986, 0, 0, 0, 0, 77.2214, -0.31, -241.478, 0.26, 55.7256, 1303.1, -0.21, 133.117, 0.25, 0 ),
"times": PoolRealArray( 0, 0.7, 1.5 )
}

[sub_resource type="Animation" id=51]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=52]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=53]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=54]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Curve" id=88]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, 4.00986 )
rotation = 6.28319
script = ExtResource( 1 )

[node name="StateMachinePlayer" type="Node" parent="."]
script = ExtResource( 7 )
state_machine = SubResource( 83 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 84 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 6
vframes = 5
frame = 2
region_rect = Rect2( 0, 0, 40, 40 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/die = SubResource( 85 )
anims/fall = SubResource( 86 )
anims/idle = SubResource( 87 )
anims/jump = SubResource( 47 )
anims/wall_slide = SubResource( 48 )

[node name="Beat" type="AnimationPlayer" parent="Sprite"]
anims/Beat = SubResource( 49 )
anims/die = SubResource( 50 )
anims/fall = SubResource( 51 )
anims/idle = SubResource( 52 )
anims/jump = SubResource( 53 )
anims/wall_slide = SubResource( 54 )

[node name="WallRaycasts" type="Node2D" parent="."]

[node name="RightWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="RayCast2D" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 6, -15 )
scale = Vector2( 10, 0.1 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="WallRaycasts/RightWallRaycasts"]
position = Vector2( 6, 15 )
scale = Vector2( 10, 0.1 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="LeftWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="RayCast2D" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( -6, -15 )
scale = Vector2( 10, 0.1 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="WallRaycasts/LeftWallRaycasts"]
position = Vector2( -6, 15 )
scale = Vector2( 10, 0.1 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="TopWallRaycasts" type="Node2D" parent="WallRaycasts"]

[node name="left" type="RayCast2D" parent="WallRaycasts/TopWallRaycasts"]
position = Vector2( 6, -18 )
scale = Vector2( 30, 0.1 )
enabled = true
cast_to = Vector2( 1, 0 )

[node name="right" type="RayCast2D" parent="WallRaycasts/TopWallRaycasts"]
position = Vector2( -6, -18 )
scale = Vector2( 30, 0.1 )
enabled = true
cast_to = Vector2( -1, 0 )

[node name="JumpDotLong" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
z_index = 200
texture = ExtResource( 11 )
script = ExtResource( 12 )

[node name="FloorRaycasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( -9, 12 )
scale = Vector2( 0.1, 10 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="RayCast2D2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2( 9, 12 )
scale = Vector2( 0.1, 10 )
enabled = true
cast_to = Vector2( 0, 1 )

[node name="JumpDotLong2" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0.133333, 0.823529, 1 )
scale = Vector2( 0.5, 0.5 )
z_index = 200
texture = ExtResource( 11 )

[node name="Trail2D" type="Line2D" parent="."]
z_index = -1
width = 7.0
width_curve = SubResource( 88 )
default_color = Color( 1, 1, 1, 0.454902 )
joint_mode = 1
script = ExtResource( 13 )
lifetime = 0.2
distance = 5.0
segments = 50

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
